# breakout_thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
src/breakout_thesis/: app.py  streamlit.py
src/breakout_thesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/breakout_thesis/pages/: streamlit.py
src/breakout_thesis/tests/: test_app.py
